tests/ui/g-control-payload-mismatch.stderr
error[E0107]: type alias takes at most 3 generic arguments but 4 generic arguments were supplied
  --> tests/ui/g-control-payload-mismatch.rs:13:5
   |
13 |     LoopBreakSteps<Controller, Target, g::Msg<LABEL_LOOP_BREAK, ()>, StepNil>;
   |     ^^^^^^^^^^^^^^ expected at most 3 generic arguments            --------- help: remove the unnecessary generic argument
   |
note: type alias defined here, with at most 3 generic parameters: `Controller`, `BreakMsg`, `Tail`
  --> src/global/program.rs
   |
   | pub type LoopBreakSteps<Controller, BreakMsg, Tail = StepNil> =
   |          ^^^^^^^^^^^^^^ ----------  --------  --------------

error[E0277]: the trait bound `Message<LabelMarker<7>, ()>: StepConcat<StepNil>` is not satisfied
  --> tests/ui/g-control-payload-mismatch.rs:39:5
   |
39 | /     LoopSteps<
40 | |         BodySteps,
41 | |         Controller,
42 | |         Target,
...  |
45 | |         StepNil,
46 | |     >,
   | |_____^ the trait `StepConcat<StepNil>` is not implemented for `Message<LabelMarker<7>, ()>`
   |
   = help: the following other types implement trait `StepConcat<Other>`:
             StepCons<Head, Tail>
             StepNil
   = note: required for `StepCons<SendStep<Role<0>, Role<0>, Role<1>>, Message<LabelMarker<7>, ()>>` to implement `StepConcat<StepNil>`

error[E0277]: the trait bound `Role<1>: LoopContinueMessage` is not satisfied
  --> tests/ui/g-control-payload-mismatch.rs:39:5
   |
39 | /     LoopSteps<
40 | |         BodySteps,
41 | |         Controller,
42 | |         Target,
...  |
45 | |         StepNil,
46 | |     >,
   | |_____^ the trait `LoopContinueMessage` is not implemented for `Role<1>`
   |
   = help: the trait `LoopContinueMessage` is implemented for `Message<LabelMarker<hibana::::global::program::{impl#7}::{constant#0}>, GenericCapToken<LoopContinueKind>, CanonicalControl<LoopContinueKind>>`
   = note: required for `StepCons<SendStep<Role<0>, Role<0>, Role<1>>, StepCons<SendStep<Role<0>, Role<0>, Role<1>>, _>>` to implement `LoopStepsAssert<Role<1>, Message<LabelMarker<48>, ()>>`

error[E0277]: the trait bound `Message<LabelMarker<48>, ()>: LoopBreakMessage` is not satisfied
  --> tests/ui/g-control-payload-mismatch.rs:39:5
   |
39 | /     LoopSteps<
40 | |         BodySteps,
41 | |         Controller,
42 | |         Target,
...  |
45 | |         StepNil,
46 | |     >,
   | |_____^ the trait `LoopBreakMessage` is not implemented for `Message<LabelMarker<48>, ()>`
   |
   = help: the trait `LoopBreakMessage` is implemented for `Message<LabelMarker<49>, GenericCapToken<LoopBreakKind>, CanonicalControl<LoopBreakKind>>`
   = note: required for `StepCons<SendStep<Role<0>, Role<0>, Role<1>>, StepCons<SendStep<Role<0>, Role<0>, Role<1>>, _>>` to implement `LoopStepsAssert<Role<1>, Message<LabelMarker<48>, ()>>`

error[E0107]: function takes 4 generic arguments but 3 generic arguments were supplied
  --> tests/ui/g-control-payload-mismatch.rs:22:40
   |
22 | const BODY: g::Program<BodySteps> = g::send::<Controller, Target, g::Msg<7, ()>>();
   |                                        ^^^^   ----------  ------  ------------- supplied 3 generic arguments
   |                                        |
   |                                        expected 4 generic arguments
   |
note: function defined here, with 4 generic parameters: `From`, `To`, `M`, `LANE`
  --> src/global.rs
   |
   | pub const fn send<From, To, M, const LANE: u8>() -> Program<StepCons<SendStep<From, To, M, LANE>, StepNil>>
   |              ^^^^ ----  --  -  --------------
help: add missing generic argument
   |
22 | const BODY: g::Program<BodySteps> = g::send::<Controller, Target, g::Msg<7, ()>, LANE>();
   |                                                                                ++++++

error[E0308]: mismatched types
  --> tests/ui/g-control-payload-mismatch.rs:22:37
   |
22 | const BODY: g::Program<BodySteps> = g::send::<Controller, Target, g::Msg<7, ()>>();
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Message<LabelMarker<7>, ()>`, found `StepNil`
   |
   = note: expected struct `Program<StepCons<SendStep<Role<0>, Role<0>, Role<1>, 0>, Message<LabelMarker<7>, ()>>>`
              found struct `Program<StepCons<SendStep<_, _, _, _>, StepNil>>`

error[E0107]: function takes 4 generic arguments but 3 generic arguments were supplied
  --> tests/ui/g-control-payload-mismatch.rs:25:8
   |
25 |     g::send::<Controller, Target, g::Msg<LABEL_LOOP_CONTINUE, ()>>();
   |        ^^^^   ----------  ------  ------------------------------- supplied 3 generic arguments
   |        |
   |        expected 4 generic arguments
   |
note: function defined here, with 4 generic parameters: `From`, `To`, `M`, `LANE`
  --> src/global.rs
   |
   | pub const fn send<From, To, M, const LANE: u8>() -> Program<StepCons<SendStep<From, To, M, LANE>, StepNil>>
   |              ^^^^ ----  --  -  --------------
help: add missing generic argument
   |
25 |     g::send::<Controller, Target, g::Msg<LABEL_LOOP_CONTINUE, ()>, LANE>();
   |                                                                  ++++++

error[E0308]: mismatched types
  --> tests/ui/g-control-payload-mismatch.rs:25:5
   |
25 |     g::send::<Controller, Target, g::Msg<LABEL_LOOP_CONTINUE, ()>>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Message<LabelMarker<48>, ()>`, found `StepNil`
   |
   = note: expected struct `Program<StepCons<SendStep<Role<0>, Role<0>, Role<1>, 0>, Message<LabelMarker<48>, ()>>>`
              found struct `Program<StepCons<SendStep<_, _, _, _>, StepNil>>`

error[E0107]: function takes 4 generic arguments but 3 generic arguments were supplied
  --> tests/ui/g-control-payload-mismatch.rs:31:8
   |
31 | > = g::send::<Controller, Target, g::Msg<LABEL_LOOP_BREAK, ()>>();
   |        ^^^^   ----------  ------  ---------------------------- supplied 3 generic arguments
   |        |
   |        expected 4 generic arguments
   |
note: function defined here, with 4 generic parameters: `From`, `To`, `M`, `LANE`
  --> src/global.rs
   |
   | pub const fn send<From, To, M, const LANE: u8>() -> Program<StepCons<SendStep<From, To, M, LANE>, StepNil>>
   |              ^^^^ ----  --  -  --------------
help: add missing generic argument
   |
31 | > = g::send::<Controller, Target, g::Msg<LABEL_LOOP_BREAK, ()>, LANE>();
   |                                                               ++++++

error[E0107]: function takes 2 generic arguments but 3 generic arguments were supplied
  --> tests/ui/g-control-payload-mismatch.rs:33:47
   |
33 | const DECISION: g::Program<LoopDecision> = g::route::<0, 1, _>(
   |                                               ^^^^^       --- help: remove the unnecessary generic argument
   |                                               |
   |                                               expected 2 generic arguments
   |
note: function defined here, with 2 generic parameters: `CONTROLLER`, `Steps`
  --> src/global.rs
   |
   | pub const fn route<const CONTROLLER: u8, Steps>(
   |              ^^^^^ --------------------  -----

error[E0277]: the trait bound `Role<1>: MessageSpec` is not satisfied
  --> tests/ui/g-control-payload-mismatch.rs:34:25
   |
34 |     g::route_chain::<0, LoopContinueArm>(CONTINUE_ARM)
   |                         ^^^^^^^^^^^^^^^ the trait `MessageSpec` is not implemented for `Role<1>`
   |
   = help: the trait `MessageSpec` is implemented for `Message<L, P, C>`
   = note: required for `StepCons<SendStep<Role<0>, Role<0>, Role<1>>, Message<LabelMarker<48>, ()>>` to implement `hibana::global::steps::RouteArm<0>`
note: required by a bound in `hibana::route_chain`
  --> src/global.rs
   |
   | pub const fn route_chain<const CONTROLLER: u8, Steps>(
   |              ----------- required by a bound in this function
...
   |     Steps: steps::RouteArm<CONTROLLER>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `route_chain`

error[E0277]: the trait bound `Role<1>: SendableLabel` is not satisfied
  --> tests/ui/g-control-payload-mismatch.rs:34:25
   |
34 |     g::route_chain::<0, LoopContinueArm>(CONTINUE_ARM)
   |                         ^^^^^^^^^^^^^^^ the trait `SendableLabel` is not implemented for `Role<1>`
   |
   = help: the trait `SendableLabel` is implemented for `Message<LabelMarker<LABEL>, Payload, Control>`
   = note: required for `StepCons<SendStep<Role<0>, Role<0>, Role<1>>, Message<LabelMarker<48>, ()>>` to implement `hibana::global::steps::RouteArm<0>`
note: required by a bound in `hibana::route_chain`
  --> src/global.rs
   |
   | pub const fn route_chain<const CONTROLLER: u8, Steps>(
   |              ----------- required by a bound in this function
...
   |     Steps: steps::RouteArm<CONTROLLER>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `route_chain`

error[E0599]: the method `and` exists for struct `RouteChainBuilder<0, StepCons<SendStep<Role<0>, Role<0>, Role<1>>, Message<LabelMarker<48>, ()>>>`, but its trait bounds were not satisfied
  --> tests/ui/g-control-payload-mismatch.rs:35:10
   |
34 | /     g::route_chain::<0, LoopContinueArm>(CONTINUE_ARM)
35 | |         .and::<LoopBreakArm>(BREAK_ARM),
   | |         -^^^ method cannot be called due to unsatisfied trait bounds
   | |_________|
   |
   |
  ::: src/global.rs
   |
   |   pub struct Message<Label, Payload, Control = NoControl>(PhantomData<(Label, Payload, Control)>);
   |   ------------------------------------------------------- doesn't satisfy `Message<LabelMarker<48>, ()>: StepConcat<_>`
   |
   = note: the following trait bounds were not satisfied:
           `Message<LabelMarker<48>, ()>: StepConcat<_>`

error[E0277]: the trait bound `Message<LabelMarker<7>, ()>: StepConcat<StepNil>` is not satisfied
  --> tests/ui/g-control-payload-mismatch.rs:47:5
   |
47 | > = g::seq(DECISION, BODY);
   |     ^^^^^^^^^^^^^^^^^^^^^^ the trait `StepConcat<StepNil>` is not implemented for `Message<LabelMarker<7>, ()>`
   |
   = help: the following other types implement trait `StepConcat<Other>`:
             StepCons<Head, Tail>
             StepNil
   = note: required for `StepCons<SendStep<Role<0>, Role<0>, Role<1>>, Message<LabelMarker<7>, ()>>` to implement `StepConcat<StepNil>`

error[E0277]: the trait bound `Role<1>: LoopContinueMessage` is not satisfied
  --> tests/ui/g-control-payload-mismatch.rs:47:5
   |
47 | > = g::seq(DECISION, BODY);
   |     ^^^^^^^^^^^^^^^^^^^^^^ the trait `LoopContinueMessage` is not implemented for `Role<1>`
   |
   = help: the trait `LoopContinueMessage` is implemented for `Message<LabelMarker<hibana::::global::program::{impl#7}::{constant#0}>, GenericCapToken<LoopContinueKind>, CanonicalControl<LoopContinueKind>>`
   = note: required for `StepCons<SendStep<Role<0>, Role<0>, Role<1>>, StepCons<SendStep<Role<0>, Role<0>, Role<1>>, _>>` to implement `LoopStepsAssert<Role<1>, Message<LabelMarker<48>, ()>>`

error[E0277]: the trait bound `Message<LabelMarker<48>, ()>: LoopBreakMessage` is not satisfied
  --> tests/ui/g-control-payload-mismatch.rs:47:5
   |
47 | > = g::seq(DECISION, BODY);
   |     ^^^^^^^^^^^^^^^^^^^^^^ the trait `LoopBreakMessage` is not implemented for `Message<LabelMarker<48>, ()>`
   |
   = help: the trait `LoopBreakMessage` is implemented for `Message<LabelMarker<49>, GenericCapToken<LoopBreakKind>, CanonicalControl<LoopBreakKind>>`
   = note: required for `StepCons<SendStep<Role<0>, Role<0>, Role<1>>, StepCons<SendStep<Role<0>, Role<0>, Role<1>>, _>>` to implement `LoopStepsAssert<Role<1>, Message<LabelMarker<48>, ()>>`

error[E0277]: the trait bound `Message<LabelMarker<49>, ()>: StepConcat<_>` is not satisfied
  --> tests/ui/g-control-payload-mismatch.rs:47:5
   |
47 | > = g::seq(DECISION, BODY);
   |     ^^^^^^^^^^^^^^^^^^^^^^ the trait `StepConcat<_>` is not implemented for `Message<LabelMarker<49>, ()>`
   |
   = help: the following other types implement trait `StepConcat<Other>`:
             StepCons<Head, Tail>
             StepNil
   = note: required for `StepCons<SendStep<Role<0>, Role<0>, Message<LabelMarker<48>, ()>>, Message<LabelMarker<49>, ()>>` to implement `StepConcat<_>`

error[E0277]: the trait bound `Message<LabelMarker<49>, ()>: StepConcat<_>` is not satisfied
  --> tests/ui/g-control-payload-mismatch.rs:47:12
   |
47 | > = g::seq(DECISION, BODY);
   |     ------ ^^^^^^^^ the trait `StepConcat<_>` is not implemented for `Message<LabelMarker<49>, ()>`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following other types implement trait `StepConcat<Other>`:
             StepCons<Head, Tail>
             StepNil
   = note: required for `StepCons<SendStep<Role<0>, Role<0>, Message<LabelMarker<48>, ()>>, Message<LabelMarker<49>, ()>>` to implement `StepConcat<_>`
   = note: 1 redundant requirement hidden
   = note: required for `StepCons<SendStep<Role<0>, Role<0>, Role<1>>, StepCons<SendStep<Role<0>, Role<0>, Message<LabelMarker<48>, ()>>, Message<LabelMarker<49>, ()>>>` to implement `StepConcat<_>`
note: required by a bound in `seq`
  --> src/global.rs
   |
   | pub const fn seq<LeftSteps, RightSteps>(
   |              --- required by a bound in this function
...
   |     LeftSteps: StepConcat<RightSteps>,
   |                ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `seq`

error[E0308]: mismatched types
  --> tests/ui/g-control-payload-mismatch.rs:47:5
   |
47 | > = g::seq(DECISION, BODY);
   |     ^^^^^^^^^^^^^^^^^^^^^^ expected `Role<1>`, found `Message<LabelMarker<48>, ()>`
   |
   = note: expected struct `Program<StepCons<SendStep<Role<0>, Role<0>, Role<1>>, StepCons<SendStep<Role<0>, Role<0>, Role<1>>, _>>>`
              found struct `Program<StepCons<SendStep<Role<0>, Role<0>, Role<1>>, StepCons<SendStep<Role<0>, Role<0>, Message<LabelMarker<48>, ()>>, _>>>`
